Bug 1238873 - Handle the bug that if we take cached data, we might not get any update later. r=kchen. r=jdm.